--- a/src/index.html
+++ b/src/index.html
@@ -10,15 +10,10 @@
     <title>Hello, world!</title>
   </head>
   <body>
-    <main class="text-center">
-      <img
-        class="img-thumbnail rounded-circle bg-light"
-        src="public/cat.png"
-        alt="Professor Meow"
-      />
-      <p class="mt-3">
-        Greetings children! It smells like new fishes 🐟 in here.
-      </p>
-    </main>
+    <h1>
+      Feel the <strong class="text-primary">Organic</strong> taste with Foody
+    </h1>
+    <p>Best food in town if you like organics!</p>
+    <input type="text" placeholder="Search here" />
   </body>
 </html>
