--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1, shrink-to-fit=no"
-    />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="shortcut icon" href="public/favicon.ico" />
     <title>Hello, world!</title>
   </head>
@@ -15,5 +12,62 @@
     </h1>
     <p>Best food in town if you like organics!</p>
     <input type="text" placeholder="Search here" />
+    <section>
+      <div class="container">
+        <div class="row">
+          <div class="col">
+            <div class="card">
+              <img
+                class="card-img-top"
+                src="https://images.unsplash.com/photo-1473093295043-cdd812d0e601?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80"
+                alt="Picture of Pasta"
+              />
+              <div class="card-body">
+                <h5 class="card-title">Pasta</h5>
+                <p class="card-text">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Velit, et.
+                </p>
+                <a href="#" class="btn btn-primary">Order</a>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card">
+              <img
+                class="card-img-top"
+                src="https://images.unsplash.com/photo-1595854341625-f33ee10dbf94?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80"
+                alt="Picture of Pizza"
+              />
+              <div class="card-body">
+                <h5 class="card-title">Pizza</h5>
+                <p class="card-text">
+                  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui,
+                  quis.
+                </p>
+                <a href="#" class="btn btn-primary">Order</a>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card">
+              <img
+                class="card-img-top"
+                src="https://images.unsplash.com/photo-1571091718767-18b5b1457add?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1052&q=80"
+                alt="Picture of Pizza"
+              />
+              <div class="card-body">
+                <h5 class="card-title">Burger</h5>
+                <p class="card-text">
+                  Lorem ipsum, dolor sit amet consectetur adipisicing elit. Qui,
+                  quis.
+                </p>
+                <a href="#" class="btn btn-primary">Order</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
