--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,36 @@
     <title>Hello, world!</title>
   </head>
   <body>
+    <!-- Navbar -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">Foody</a>
+      </div>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-bs-toggle="collapse"
+        data-bs-target="#navbarNav"
+        aria-controls="navbarNavAltMarkup"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a href="#" class="nav-link active">Menu</a>
+          </li>
+          <li class="nav-item">
+            <a href="#" class="nav-link">Order</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+
+    <!-- Main -->
+
     <h1>
       Feel the <strong class="text-primary">Organic</strong> taste with Foody
     </h1>
